# HW14_test_v3

./: README.md  docker-compose.yml  main.py  pyproject.toml  schemas.py  test.py  test.sqlite
alembic/: env.py
alembic/versions/: 5b473edc1b38_first.py  6e5997dd78e2_sec.py  bd01ddcdecc9_five.py
conf/: config.py  messages.py
database/: db.py  models.py
docs/source/: conf.py  index.rst
myenv/Scripts/: activate  activate.bat
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
pyproject/: pyproject.toml
repository/: contacts.py  todos.py  users.py
routes/: auth.py  contacts.py  data.py  todos.py
services/: auth.py  email.py  roles.py
services/templates/: email_template.html
tests/: conftest.py  test_e2e_auth.py  test_unit_repository_todo.py
