[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["evgeniytr1509 <evgeniytr1509@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.4.1"
sqlalchemy = "^2.0.19"
fastapi = {extras = ["all"], version = "^0.101.1"}


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.2"


[tool.poetry.group.testd.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.test.dependencies]
httpx = "^0.24.1"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
